--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ requires-python = ">=3.11"
 dependencies = [
     "pandas>=2.2.3",
     "plotly>=6.0.0",
+    "psycopg2-binary>=2.9.10",
     "streamlit>=1.42.0",
 ]
