Agent query: Could you verify that the System Design documentation page and navigation are working correctly in the app?
Add .gitignore entries for secrets and configuration files.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/82b9c1a1-5ca8-4867-a90f-6df791578b9a/26484317-7e3c-4e98-953d-0945b4e7d5c3.jpg

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ poetry.lock
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Secrets and configuration
+.env
+.streamlit/secrets.toml
