--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ dependencies = [
     "pandas>=2.2.3",
     "plotly>=6.0.0",
     "psycopg2-binary>=2.9.10",
+    "requests>=2.32.3",
     "streamlit>=1.42.0",
     "trafilatura>=2.0.0",
     "twilio>=9.4.5",
+    "urllib3>=2.3.0",
 ]
